# aoc-2020

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Justfile  README.md  manage.sh
d01/: Cargo.toml
d01/src/: main.rs
d02/: Cargo.toml
d02/src/: main.rs
d03/: Cargo.toml
d03/src/: main.rs
d04/: Cargo.toml
d04/src/: main.rs
d05/: Cargo.toml
d05/src/: main.rs
d06/: Cargo.toml
d06/src/: main.rs
d07/: Cargo.toml
d07/src/: main.rs
d08/: Cargo.toml
d08/src/: main.rs
d09/: Cargo.toml
d09/src/: main.rs
d10/: Cargo.toml
d10/src/: main.rs
d11/: Cargo.toml
d11/src/: main.rs
d12/: Cargo.toml
d12/src/: main.rs
d13/: Cargo.toml
d13/src/: main.rs
d14/: Cargo.toml
d14/src/: main.rs
d15/: Cargo.toml
d15/src/: main.rs
d16/: Cargo.toml
d16/src/: main.rs
d17/: Cargo.toml
d17/src/: main.rs
d18/: Cargo.toml
d18/src/: main.rs
d19/: Cargo.toml
d19/src/: main.rs
d20/: Cargo.toml
d20/src/: main.rs
d21/: Cargo.toml
d21/src/: main.rs
d22/: Cargo.toml
d22/src/: main.rs
d23/: Cargo.toml
d23/src/: main.rs
d24/: Cargo.toml
d24/src/: main.rs
d25/: Cargo.toml
d25/src/: main.rs
src/: lib.rs
